# CramSim

./: CMakeLists.txt  CramSim.cpp  README  README.md  TxnDispatcher.cpp  TxnDispatcher.hpp  c_AddressHasher.cpp  c_AddressHasher.hpp  c_Bank.cpp  c_Bank.hpp  c_BankCommand.cpp  c_BankCommand.hpp  c_BankGroup.cpp  c_BankGroup.hpp  c_BankInfo.cpp  c_BankInfo.hpp  c_BankState.hpp  c_BankStateActivating.cpp  c_BankStateActivating.hpp  c_BankStateActive.cpp  c_BankStateActive.hpp  c_BankStateIdle.cpp  c_BankStateIdle.hpp  c_BankStatePrecharge.cpp  c_BankStatePrecharge.hpp  c_BankStateRead.cpp  c_BankStateRead.hpp  c_BankStateReadA.cpp  c_BankStateReadA.hpp  c_BankStateRefresh.cpp  c_BankStateRefresh.hpp  c_BankStateWrite.cpp  c_BankStateWrite.hpp  c_BankStateWriteA.cpp  c_BankStateWriteA.hpp  c_Channel.cpp  c_Channel.hpp  c_CmdPtrPkgEvent.hpp  c_CmdReqEvent.hpp  c_CmdResEvent.hpp  (+31 more)
tests/: ariel_cramsim.py  test_txntrace.py
tests/patches/: macsim.patch
